Fixed broken style on home, join and host page

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -36,6 +36,10 @@
     background-color: #FF5A5A;
     width: 100vw;
     height: 100vh;
+    
+}
+
+.gameLayoutContent {
     display: grid;
     grid-template-columns: 100vh 2fr;
     grid-template-areas: 
